# compliance-gpt

./: .env.example  .gitignore  AA_EXTRACTION_V2_VALIDATION_RESULTS.md  CLAUDE.md  DEMO.md  LICENSE  OPUS_VALIDATION.md  PIPELINE.md  README.md  README_POC.md  SESSION_SUMMARY.md  activate.sh  pyproject.toml
design/: AUDIT_2025-10-23.md  README.md  STATUS_2025-10-23.md  performance_optimization.md
docs/: AA_EXTRACTION_CONSULTATION_2025-10-30.md  AA_V5.1_FRAGMENTATION_CONSULTATION_2025-10-30.md  AA_V5_HIERARCHY_CONSULTATION_2025-10-30.md  AA_V5_IMPLEMENTATION_PLAN.md  AA_V5_IMPLEMENTATION_PROGRESS.md  EXTRACTION_COMPLETE_NEXT_STEPS.md  PIPELINE_AUDIT_2025-10-30.md  PROMPT_EXPERT_CONSULTATION.md  PROMPT_EXPERT_FEEDBACK_2025-10-30.md  ROOT_CLEANUP_2025-10-30.md  TECH_DEBT_STRUCTURED_OUTPUTS.md  synthetic_election_design.md
process/: README.md  control_001_plan_qualification.md  control_002_document_reconciliation.md  control_003_exception_handling.md  control_004_amendment_and_restated_plan_signoff.md
prompts/: FUTURE_ENHANCEMENTS.md  README.md  aa_extraction_v1.txt  aa_extraction_v2.txt  aa_extraction_v3.txt  aa_extraction_v4.txt  aa_extraction_v5.1.txt  aa_extraction_v5.txt  aa_semantic_mapping_v1.txt  provision_extraction_v1.txt  provision_extraction_v2.txt  provision_extraction_v3.txt  provision_extraction_v4.1.txt  provision_extraction_v4.txt  provision_extraction_v5.txt  semantic_mapping_v1.txt
requirements/: README.md  functional_requirements.md
research/: README.md
scripts/: analyze_aa_orphans.py  analyze_opus_pairs.py  assign_unique_ids.py  cli.py  (+40 more)
(+128 files in other folders)
