[project]
name = "compliance-gpt"
version = "0.1.0"
description = "AI-assisted plan document compliance tool for retirement plan conversions"
authors = [
    {name = "Sergio DuBois", email = "sergio.dubois@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # PDF extraction
    "pypdf>=5.1.0",  # Modern version (pypdf2 is deprecated)
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",  # For image handling in vision fallback

    # LLM integration
    "anthropic>=0.39.0",
    "openai>=1.0.0",  # For embeddings (if using OpenAI)

    # Data models and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database
    "sqlalchemy>=2.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",  # Better terminal output

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",  # Retry logic for API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
compliance-gpt = "scripts.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
